<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>2.7.3</version>
    <relativePath/> <!-- lookup parent from repository -->
  </parent>
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.kyyee.kafkacli</groupId>
  <artifactId>kafkacli</artifactId>
  <version>1.0.0</version>
  <name>${artifactId}</name>
  <url>https://github.com/kyyee/kafkacli</url>
  <description>kafka desktop client for developers</description>
  <packaging>jar</packaging>

  <properties>
    <exec.mainClass>com.kyyee.kafkacli.App</exec.mainClass>
    <java.version>17</java.version>
    <!--    <maven.repository>${user.home}/.m2/repository</maven.repository>-->
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>com.formdev</groupId>
      <artifactId>flatlaf</artifactId>
      <version>2.4</version>
    </dependency>
    <dependency>
      <groupId>com.formdev</groupId>
      <artifactId>flatlaf-extras</artifactId>
      <version>2.4</version>
    </dependency>
    <dependency>
      <groupId>com.formdev</groupId>
      <artifactId>flatlaf-intellij-themes</artifactId>
      <version>2.4</version>
    </dependency>
    <dependency>
      <groupId>cn.hutool</groupId>
      <artifactId>hutool-setting</artifactId>
      <version>5.8.7</version>
    </dependency>
    <dependency>
      <groupId>cn.hutool</groupId>
      <artifactId>hutool-http</artifactId>
      <version>5.8.7</version>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>forms_rt</artifactId>
      <version>7.0.3</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-aop</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.kafka</groupId>
      <artifactId>spring-kafka</artifactId>
    </dependency>

    <!--    <dependency>-->
    <!--      <groupId>org.apache.kafka</groupId>-->
    <!--      <artifactId>kafka-clients</artifactId>-->
    <!--      <version>3.2.3</version>-->
    <!--    </dependency>-->

    <!--    <dependency>-->
    <!--      <groupId>com.fasterxml.jackson.core</groupId>-->
    <!--      <artifactId>jackson-databind</artifactId>-->
    <!--      <version>2.13.4</version>-->
    <!--    </dependency>-->
    <!--    <dependency>-->
    <!--      <groupId>com.fasterxml.jackson.datatype</groupId>-->
    <!--      <artifactId>jackson-datatype-jsr310</artifactId>-->
    <!--      <version>2.13.4</version>-->
    <!--    </dependency>-->
    <!--    <dependency>-->
    <!--      <groupId>ch.qos.logback</groupId>-->
    <!--      <artifactId>logback-classic</artifactId>-->
    <!--      <version>1.4.1</version>-->
    <!--    </dependency>-->
    <!--    <dependency>-->
    <!--      <groupId>org.junit.jupiter</groupId>-->
    <!--      <artifactId>junit-jupiter</artifactId>-->
    <!--      <version>5.9.0</version>-->
    <!--      <scope>test</scope>-->
    <!--    </dependency>-->
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>2.11.0</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>3.12.0</version>
    </dependency>

    <dependency>
      <groupId>net.lingala.zip4j</groupId>
      <artifactId>zip4j</artifactId>
      <version>2.11.1</version>
    </dependency>

    <dependency>
      <groupId>com.carrotsearch</groupId>
      <artifactId>java-sizeof</artifactId>
      <version>0.0.5</version>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.24</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <!-- https://github.com/fvarrui/JavaPackager -->
      <plugin>
        <groupId>io.github.fvarrui</groupId>
        <artifactId>javapackager</artifactId>
        <version>1.6.7</version>
        <configuration>
          <!-- mandatory -->
          <mainClass>${exec.mainClass}</mainClass>
          <!-- optional -->
          <bundleJre>true</bundleJre>
          <!-- this will bundle a full JRE -->
          <customizedJre>false</customizedJre>
          <!-- 这行不能被格式化为多行，否则会出错-->
          <vmArgs>--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</vmArgs>
        </configuration>
        <executions>
          <execution>
            <id>bundling-for-windows</id>
            <phase>package</phase>
            <goals>
              <goal>package</goal>
            </goals>
            <configuration>
              <platform>windows</platform>
              <createZipball>true</createZipball>
              <generateInstaller>true</generateInstaller>
              <administratorRequired>true</administratorRequired>
              <winConfig>
                <generateMsi>false</generateMsi>
                <generateMsm>false</generateMsm>
                <headerType>console</headerType>
                <companyName>${groupId}</companyName>
                <fileVersion>1.0.0.0</fileVersion>
                <txtFileVersion>${version}</txtFileVersion>
                <productVersion>1.0.0.0</productVersion>
                <txtProductVersion>${version}</txtProductVersion>
                <fileDescription>${description}</fileDescription>
                <copyright>Copyright © 2018-2022 kyyee</copyright>
                <productName>${name}</productName>
                <internalName>${name}</internalName>
                <originalFilename>${name}.exe</originalFilename>

                <!-- choose EXE creation tool -->
                <exeCreationTool>launch4j</exeCreationTool>

                <!-- setup generation properties -->
                <setupMode>askTheUser</setupMode>
                <setupLanguages>
                  <english>compiler:Default.isl</english>
                  <chinese>compiler:Languages\Chinese.isl</chinese>
                  <german>compiler:Languages\German.isl</german>
                  <spanish>compiler:Languages\Spanish.isl</spanish>
                </setupLanguages>
                <disableDirPage>false</disableDirPage>
                <disableProgramGroupPage>false</disableProgramGroupPage>
                <disableFinishedPage>false</disableFinishedPage>
                <disableRunAfterInstall>false</disableRunAfterInstall>
                <disableWelcomePage>false</disableWelcomePage>
                <createDesktopIconTask>true</createDesktopIconTask>
                <removeOldLibs>true</removeOldLibs>
              </winConfig>
            </configuration>
          </execution>

<!--          <execution>-->
<!--            <id>bundling-for-linux</id>-->
<!--            <phase>package</phase>-->
<!--            <goals>-->
<!--              <goal>package</goal>-->
<!--            </goals>-->
<!--            <configuration>-->
<!--              <platform>linux</platform>-->
<!--              <createTarball>true</createTarball>-->
<!--            </configuration>-->
<!--          </execution>-->

<!--          <execution>-->
<!--            <id>bundling-for-mac</id>-->
<!--            <phase>package</phase>-->
<!--            <goals>-->
<!--              <goal>package</goal>-->
<!--            </goals>-->
<!--            <configuration>-->
<!--              <platform>mac</platform>-->
<!--              <createTarball>true</createTarball>-->
<!--            </configuration>-->
<!--          </execution>-->

        </executions>
      </plugin>
    </plugins>
  </build>
</project>
